# edgartools

./: CMakeLists.txt  README.md
common/: CMakeLists.txt
common/cpp/: common.cpp
common/include/: common.h
insider/: CMakeLists.txt
insider/cpp/: insider.cpp
insider/include/: insider.h
main/: CMakeLists.txt  insiderApp.cpp
test/: CMakeLists.txt  insider_test.cpp
